Change into browserify

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Framer</title>
+		<title>Anim</title>
 
 		<style>
 			.box {
@@ -22,7 +22,7 @@
 		<script src="https://rawgithub.com/jfsiii/XCSSMatrix/master/dist/browserify/XCSSMatrix.js"></script>
 		<script src="https://rawgithub.com/sole/tween.js/master/src/Tween.js"></script>
 
-		<script src="dist/0.0.1/AnimJS-0.0.1.js"></script>
+		<script src="dist/Anim.js"></script>
 		<script>
 
 			var view = new Anim(document.getElementById('Box')/*, {
