--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 		
 		<div id="Box" class="box"></div>
 
-		<script src="https://rawgithub.com/jfsiii/XCSSMatrix/master/dist/browserify/XCSSMatrix.js"></script>
-		<script src="https://rawgithub.com/sole/tween.js/master/src/Tween.js"></script>
+		<script src="XCSSMatrix.js"></script>
+		<script src="Tween.js"></script>
 
 		<script src="dist/Anim.js"></script>
 		<script>
