--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<style>
 			.box {
 				position: absolute;
-				width: 251;
-				height: 302;
+				width: 251px;
+				height: 302px;
 				top: 100px;
 				left: 100px;
 				opacity: 0;
