Fix reference to Easing and update file paths

--- a/springs.html
+++ b/springs.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		
+
 		<title>FLUX | Springs</title>
 
 		<style>
@@ -38,7 +38,7 @@
 		</style>
 	</head>
 	<body>
-			
+
 		<div class="sample">
 			<div class="box" data-x></div>
 			<span class="label">translate x</span>
@@ -146,8 +146,8 @@
 
 
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-		<script src="dist/flux.js"></script>
-		
+		<script src="dist/flux-tween.js"></script>
+
 		<script src="test/stats.js"></script>
 		<script src="test/springs.js"></script>
 	</body>
