--- a/tweens.html
+++ b/tweens.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		
+
 		<title>FLUX | Tweens</title>
 
 		<style>
@@ -22,7 +22,7 @@
 
 		<div id="target"></div>
 
-		<script src="dist/flux.js"></script>
+		<script src="dist/flux-tween.js"></script>
 
 		<script src="test/stats.js"></script>
 		<script src="test/createGraph.js"></script>
