--- a/test/tweens.html
+++ b/test/tweens.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 
-		<title>FLUX | Tweens</title>
+		<title>flux | tweens</title>
 
 		<style>
 			body {
@@ -22,10 +22,10 @@
 
 		<div id="target"></div>
 
-		<script src="dist/flux-tween.js"></script>
+		<script src="../flux-tween.js"></script>
 
-		<script src="test/stats.js"></script>
-		<script src="test/createGraph.js"></script>
-		<script src="test/tweens.js"></script>
+		<script src="libs/stats.js"></script>
+		<script src="js/createGraph.js"></script>
+		<script src="js/tweens.js"></script>
 	</body>
 </html>
